ui polish and backend optimizations
